Fix pkgdown build: update reference index, fix vignette, add missing docs

--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -37,16 +37,28 @@ plot_phylo_heatmap2(
 
 # Consensus tree with clade confidence
 ```{r}
-mcmc_trees = collect_chains(KX003_1_mcmc, burnin = 100)
-gtree_cons = get_consensus(mcmc_trees, p = 0.5)
+# KX003_1_mcmc contains 3 chains of phylo trees - flatten and apply burnin
+burnin = 100
+mcmc_trees = lapply(KX003_1_mcmc, function(chain) chain[(burnin + 1):length(chain)]) %>%
+    unlist(recursive = FALSE)
+class(mcmc_trees) = "multiPhylo"
+
+# Build consensus tree with clade frequencies using ape
+tree_cons = ape::consensus(mcmc_trees, p = 0.5, rooted = TRUE)
+
+# Use prop.part to compute clade frequencies
+pp = ape::prop.part(mcmc_trees)
+clade_freqs = attr(pp, "number") / length(mcmc_trees)
+tree_cons$node.label = round(clade_freqs[1:tree_cons$Nnode], 2)
+
 plot_phylo_heatmap2(
-    gtree_cons, 
+    tree_cons,
     KX003_1_mut_dat,
     dot_size = 1,
     branch_width = 0.3,
     branch_length = F,
-    node_conf = T, 
+    node_conf = T,
     het_max = 1,
-    title = 'ML'
+    title = 'Consensus'
 )
 ```
