--- a/vignettes/analysis-workflow.Rmd
+++ b/vignettes/analysis-workflow.Rmd
@@ -35,15 +35,26 @@ library(patchwork)
 We use a small in vitro LARRY barcode sample (200 cells, 186 variants) bundled
 with the package.
 
-```{r data}
-data(pL1000_tree_annot)
-data(pL1000_mut_dat)
+Run the same inference command used in the README:
+
+```bash
+Rscript inst/bin/run_mitodrift_em.R \
+  --mut_dat inst/extdata/pL1000_mut_dat.csv \
+  --outdir mitodrift_demo \
+  --tree_mcmc_iter 5000 \
+  --tree_mcmc_chains 4 \
+  --tree_mcmc_burnin 1000
 ```
 
-In a typical workflow you would load the annotated tree from MitoDrift output:
+This writes `mitodrift_demo/mitodrift_object.rds` and `mitodrift_demo/tree_annotated.newick`.
+The workflow below uses the same mutation table and an annotated tree generated with those settings.
 
-```r
-# tree_annot <- ape::read.tree("tree_annotated.newick")
+```{r data}
+mut_dat <- read.csv(
+  system.file("extdata", "pL1000_mut_dat.csv", package = "mitodrift")
+)
+data(pL1000_tree_annot)
+tree_annot <- pL1000_tree_annot
 ```
 
 ## Visualize the full binary tree
@@ -54,8 +65,8 @@ score.
 
 ```{r full-tree, fig.width=10, fig.height=6}
 plot_phylo_heatmap2(
-  pL1000_tree_annot,
-  pL1000_mut_dat,
+  tree_annot,
+  mut_dat,
   node_conf = TRUE,
   dot_size = 2,
   branch_length = FALSE,
@@ -71,7 +82,7 @@ threshold that balances precision (are the clades real?) and recall (are we
 keeping enough structure?).
 
 ```{r pr-curve, fig.width=4.0, fig.height=2, dpi=250, out.width='65%', fig.align='center'}
-pr_df <- compute_variant_pr_curve(pL1000_tree_annot, pL1000_mut_dat)
+pr_df <- compute_variant_pr_curve(tree_annot, mut_dat)
 plot_prec_recall_vs_conf(
   pr_df,
   sample_name = "Variant-based precision recall",
@@ -84,7 +95,7 @@ plot_prec_recall_vs_conf(
 Collapse low-confidence nodes below the chosen threshold with `trim_tree()`.
 
 ```{r trim}
-tree_trim <- trim_tree(pL1000_tree_annot, conf = 0.2)
+tree_trim <- trim_tree(tree_annot, conf = 0.2)
 ```
 
 Visualize the trimmed tree — polytomies replace poorly supported splits.
@@ -92,7 +103,7 @@ Visualize the trimmed tree — polytomies replace poorly supported splits.
 ```{r trimmed-tree, fig.width=10, fig.height=6}
 plot_phylo_heatmap2(
   tree_trim,
-  pL1000_mut_dat,
+  mut_dat,
   node_conf = TRUE,
   dot_size = 2,
   branch_length = FALSE,
@@ -124,7 +135,7 @@ clone_pal <- make_clade_pal(length(clade_order), labels = clade_order,
 ```{r clone-heatmap, fig.width=10, fig.height=6}
 plot_phylo_heatmap2(
   tree_trim,
-  pL1000_mut_dat,
+  mut_dat,
   cell_annot = clone_df,
   annot_pal = clone_pal,
   node_conf = TRUE,
